# online-filtering

arduino/: platformio.ini  warnings.py
arduino/include/: filters.hpp
arduino/src/: main.cpp
gui/: Cargo.toml  Cranky.toml
gui/src/: app.rs  main.rs
gui/src/app/: filter.rs  ports.rs
gui/src/app/filter/: graph.rs  workers.rs
